--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.6.0</version>
         <configuration>
-          <mainClass>org.example.LeapYear</mainClass>
+          <mainClass>org.example.JetBrains_Task6</mainClass>
         </configuration>
       </plugin>
     </plugins>
